@@ -20,10 +20,12 @@ rb-crafter-blueprint=A temporary blueprint provided by the Recipe Book to quickl
 add-to-favorites=Add to favorites
 back-to=Back to __1__\nRight-click to go home
 blueprint-not-available=A blueprint is not available for this crafter.
+burnable-in=Burnable in (__1__)
 category=Category:
 click-to-view-technology=Click to view on technology screen.
 click-to-view=Click to view details.
 close-quick-reference=Close quick reference panel
+compatible-fuels=Compatible fuels (__1__)
 control-click-to-view-fixed-recipe=Control + click to view fixed recipe.
 crafter=Crafter
 crafting-categories=Crafting categories:
@@ -33,6 +35,7 @@ favorites=Favorites
 fixed-recipe=Fixed recipe:
 fluid=Fluid
 forward-to=Forward to __1__
+fuel-categories=Fuel categories:
 fuel-category=Fuel category:
 fuel-value=Fuel value:
 general=General
