@@ -391,7 +391,11 @@ function main_gui.open_page(player, player_table, obj_class, obj_name, skip_hist
   else
     info_bar.frame.visible = true
 
-    local _, _, caption, tooltip = formatter(global.recipe_book[int_class][int_name], player_data, nil, true, true)
+    local _, _, caption, tooltip = formatter(
+      global.recipe_book[int_class][int_name],
+      player_data,
+      {always_show = true, is_label = true}
+    )
     info_bar.label.caption = caption
     info_bar.label.tooltip = tooltip
 
