@@ -11,6 +11,7 @@ function material_page.build()
     info_list_box.build({"rb-gui.mined-from"}, 1, {"material", "mined_from"}),
     info_list_box.build({"rb-gui.pumped-by"}, 1, {"material", "pumped_by"}),
     info_list_box.build({"rb-gui.usable-in"}, 1, {"material", "usable_in"}),
+    info_list_box.build({"rb-gui.burnable-in"}, 1, {"material", "burnable_in"}),
     info_list_box.build({"rb-gui.unlocked-by"}, 1, {"material", "unlocked_by"})
   }
 end
@@ -27,6 +28,7 @@ function material_page.update(int_name, gui_data, player_data)
   info_list_box.update(obj_data.mined_from, "resource", refs.material.mined_from, player_data)
   info_list_box.update(obj_data.pumped_by, "offshore_pump", refs.material.pumped_by, player_data)
   info_list_box.update(obj_data.usable_in, "lab", refs.material.usable_in, player_data)
+  info_list_box.update(obj_data.burnable_in, "crafter", refs.material.burnable_in, player_data)
   info_list_box.update(obj_data.unlocked_by, "technology", refs.material.unlocked_by, player_data)
 end
 
